Uses Foreign Memory Access API for reading long values from a char array.
Signed-off-by: Werner Randelshofer <werner.randelshofer@fibermail.ch>