@@ -24,14 +24,6 @@ import java.util.concurrent.TimeUnit;
 /**
  * Benchmarks for selected floating point strings.
  * <pre>
- * # VM version: JDK 18, OpenJDK 64-Bit Server VM, 18-xx
- * 13StringDecSwar                      12345678  avgt    2  5.495          ns/op
- * 13StringDecSwar                      12345x78  avgt    2  5.214          ns/op
- * 13StringDecSwarOld                   12345678  avgt    2  6.676          ns/op
- * 13StringDecSwarOld                   12345x78  avgt    2  5.188          ns/op
- *
- * </pre>
- * <pre>
  * # VM version: JDK 19-ea, OpenJDK 64-Bit Server VM, 19-ea+31-2203
  * # Intel(R) Core(TM) i7-8700B CPU @ 3.20GHz SIMD-256
  *
@@ -45,8 +37,8 @@ import java.util.concurrent.TimeUnit;
  *
  * 11ByteArrayDecSwar    12345678  avgt    2   3.687          ns/op
  * 11ByteArrayDecSwar    12345x78  avgt    2   3.216          ns/op
- * 12CharArrayDecSwar    12345678  avgt    2   5.596          ns/op
- * 12CharArrayDecSwar    12345x78  avgt    2   4.641          ns/op
+ * 12CharArrayDecSwar    12345678  avgt    2   4.616          ns/op
+ * 12CharArrayDecSwar    12345x78  avgt    2   4.120          ns/op
  * 13StringDecSwar       12345678  avgt    2   6.208          ns/op
  * 13StringDecSwar       12345x78  avgt    2   4.847          ns/op
  * 14ByteArrayHexSwar    12345678  avgt    2   6.116          ns/op
@@ -70,7 +62,8 @@ import java.util.concurrent.TimeUnit;
  * Process finished with exit code 0
  * </pre>
  */
-@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "--add-modules", "jdk.incubator.vector"
+@Fork(value = 1, jvmArgsAppend = {"-XX:+UnlockExperimentalVMOptions", "--add-modules", "jdk.incubator.vector",
+        "--enable-preview"
         //   ,"-XX:+UnlockDiagnosticVMOptions", "-XX:PrintAssemblyOptions=intel", "-XX:CompileCommand=print,ch/randelshofer/fastdoubleparser/FastDoubleSwar.*"
 })
 @Measurement(iterations = 2)
@@ -90,99 +83,100 @@ public class EightDigitsJmh {
         eightDigitsByteArray = eightDigitsCharSequence.getBytes(StandardCharsets.UTF_8);
     }
 
-    @Benchmark
-    public int m01ByteArrayDecScalar() {
-        int value = 0;
-        for (int i = 0; i < eightDigitsByteArray.length; i++) {
-            byte ch = eightDigitsByteArray[i];
-            if (isDigit(ch)) {
-                value = value * 10 + ch - '0';
-            } else {
-                return -1;
+    /*
+        @Benchmark
+        public int m01ByteArrayDecScalar() {
+            int value = 0;
+            for (int i = 0; i < eightDigitsByteArray.length; i++) {
+                byte ch = eightDigitsByteArray[i];
+                if (isDigit(ch)) {
+                    value = value * 10 + ch - '0';
+                } else {
+                    return -1;
+                }
             }
+            return value;
         }
-        return value;
-    }
 
-    @Benchmark
-    public int m02StringDecScalar() {
-        int value = 0;
-        for (int i = 0, n = eightDigitsCharSequence.length(); i < n; i++) {
-            char ch = eightDigitsCharSequence.charAt(i);
-            if (isDigit(ch)) {
-                value = value * 10 + ch - '0';
-            } else {
-                return -1;
+        @Benchmark
+        public int m02StringDecScalar() {
+            int value = 0;
+            for (int i = 0, n = eightDigitsCharSequence.length(); i < n; i++) {
+                char ch = eightDigitsCharSequence.charAt(i);
+                if (isDigit(ch)) {
+                    value = value * 10 + ch - '0';
+                } else {
+                    return -1;
+                }
             }
+            return value;
         }
-        return value;
-    }
 
-    @Benchmark
-    public int m03CharArrayDecScalar() {
-        int value = 0;
-        for (int i = 0; i < eightDigitsCharArray.length; i++) {
-            char ch = eightDigitsCharArray[i];
-            if (isDigit(ch)) {
-                value = value * 10 + ch - '0';
-            } else {
-                return -1;
+        @Benchmark
+        public int m03CharArrayDecScalar() {
+            int value = 0;
+            for (int i = 0; i < eightDigitsCharArray.length; i++) {
+                char ch = eightDigitsCharArray[i];
+                if (isDigit(ch)) {
+                    value = value * 10 + ch - '0';
+                } else {
+                    return -1;
+                }
             }
+            return value;
         }
-        return value;
+
+        @Benchmark
+        public int m11ByteArrayDecSwar() {
+            return FastDoubleSwar.tryToParseEightDigitsUtf8(eightDigitsByteArray, 0);
+        }
+
+        @Benchmark
+        public int m12CharArrayDecSwar() {
+            return FastDoubleSwar.tryToParseEightDigitsUtf16(eightDigitsCharArray, 0);
+        }
+
+        @Benchmark
+        public int m13StringDecSwar() {
+            String str = eightDigitsCharSequence;
+            int offset = 0;
+
+            // Performance: We extract the chars in two steps so that we
+            //              can benefit from out of order execution in the CPU.
+            long first = str.charAt(offset)
+                    | (long) str.charAt(offset + 1) << 16
+                    | (long) str.charAt(offset + 2) << 32
+                    | (long) str.charAt(offset + 3) << 48;
+
+        long second = str.charAt(offset + 4)
+                | (long) str.charAt(offset + 5) << 16
+                | (long) str.charAt(offset + 6) << 32
+                | (long) str.charAt(offset + 7) << 48;
+
+            return FastDoubleSwar.tryToParseEightDigitsUtf16(first, second);
     }
 
-    @Benchmark
-    public int m11ByteArrayDecSwar() {
-        return FastDoubleSwar.tryToParseEightDigitsUtf8(eightDigitsByteArray, 0);
-    }
+        @Benchmark
+        public long m14ByteArrayHexSwar() {
+            return FastDoubleSwar.tryToParseEightHexDigitsUtf8(eightDigitsByteArray, 0);
+        }
 
-    @Benchmark
-    public int m12CharArrayDecSwar() {
-        return FastDoubleSwar.tryToParseEightDigitsUtf16(eightDigitsCharArray, 0);
-    }
-
-    @Benchmark
-    public int m13StringDecSwar() {
-        String str = eightDigitsCharSequence;
-        int offset = 0;
-
-        // Performance: We extract the chars in two steps so that we
-        //              can benefit from out of order execution in the CPU.
-        long first = str.charAt(offset)
-                | (long) str.charAt(offset + 1) << 16
-                | (long) str.charAt(offset + 2) << 32
-                | (long) str.charAt(offset + 3) << 48;
-
-    long second = str.charAt(offset + 4)
-            | (long) str.charAt(offset + 5) << 16
-            | (long) str.charAt(offset + 6) << 32
-            | (long) str.charAt(offset + 7) << 48;
-
-        return FastDoubleSwar.tryToParseEightDigitsUtf16(first, second);
-}
-
-    @Benchmark
-    public long m14ByteArrayHexSwar() {
-        return FastDoubleSwar.tryToParseEightHexDigitsUtf8(eightDigitsByteArray, 0);
-    }
-
-    @Benchmark
-    public long m15CharArrayHexSwar() {
-        return FastDoubleSwar.tryToParseEightHexDigitsUtf16(eightDigitsCharArray, 0);
-    }
+        @Benchmark
+        public long m15CharArrayHexSwar() {
+            return FastDoubleSwar.tryToParseEightHexDigitsUtf16(eightDigitsCharArray, 0);
+        }
 
 
-    @Benchmark
-    public int m21ByteArrayDecVector() {
-        return FastDoubleVector.tryToParseEightDigitsUtf8(eightDigitsByteArray, 0);
-    }
-
+        @Benchmark
+        public int m21ByteArrayDecVector() {
+            return FastDoubleVector.tryToParseEightDigitsUtf8(eightDigitsByteArray, 0);
+        }
+    */
     @Benchmark
     public int m22CharArrayDecVector() {
         return FastDoubleVector.tryToParseEightDigitsUtf16(eightDigitsCharArray, 0);
     }
-
+/*
     @Benchmark
     public int m23StringDecVector() {
         String str = this.eightDigitsCharSequence;
@@ -221,6 +215,8 @@ public class EightDigitsJmh {
     private static boolean isDigit(char c) {
         return '0' <= c && c <= '9';
     }
+
+ */
 }
 
 
